2003-03-22  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py, src/modules/...: Modified the module structure into a
	more object-oriented one, introducing a base class Module in module
	rubber.

2003-03-21  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py, man/...: Introduced directives (module and path).

2003-03-11  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py (Environment.execute): Changed the thread into a
	forked process.

	* src/modules/natbib.py, man/...: Added support for package natbib.

	* src/graphics/mpost.py: Fixed the execution rule for compiling in
	different directories.

	* src/modules/graphics.py, src/graphics/__init__: Added support for the
	\graphicspath macro.

	* src/__init__.py: Added support for running programs from different
	directories, allowed macros to parse the rest of their line.

2003-02-24  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Changed \batchmode into \nonstopmode so that
	possible Kpathsea messages actually show during TeX runs.

2003-02-05  Emmanuel Beffara  <manu@beffara.org>

	* src/graphics/__init__.py, src/graphics/jpeg2ps.py: Introduced
	automatic JPEG to EPS conversion with jpeg2ps.

2003-02-03  Emmanuel Beffara  <manu@beffara.org>

	* src/cmd_info.py: Modified action "deps" so that dependencies are
	listed only once.

2003-01-29  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Fixed the behaviour in the case where LaTeX cannot
	be run.

2003-01-28  Emmanuel Beffara  <manu@beffara.org>

	* src/graphics/mpost.py: Introduced class MPLogCheck to report
	Metapost errors correctly.

	* setup.py: Removed accented characters in comments so that the
	new specification is followed.

2002-12-04  Emmanuel Beffara  <manu@beffara.org>

	* Version 0.99.5 released.

	* debian/control: Fixed dependency rules (again).

2002-11-29  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py (Message.error): Allowed the error lines to be
	unspecified.
