@@ -1,5 +1,7 @@
 2003-03-22  Emmanuel Beffara  <manu@beffara.org>
 
+	* src/__init__.py: Introduced support for module-specific directives.
+
 	* src/__init__.py, src/modules/...: Modified the module structure into a
 	more object-oriented one, introducing a base class Module in module
 	rubber.
